hphp/hack/test/typecheck/tconst/constructor_error.php.exp
File "constructor_error.php", line 14, characters 26-27:
Invalid argument (Typing[4110])
File "constructor_error.php", line 8, characters 39-45:
This is the expression dependent type <static>::T
File "constructor_error.php", line 4, characters 19-26:
  resulting from expanding the type constant X::T
File "constructor_error.php", line 14, characters 15-28:
  where '<static>' refers to the late bound type of the enclosing class
File "constructor_error.php", line 14, characters 26-27:
It is incompatible with a string
